--- a/Dockerfile.backend
+++ b/Dockerfile.backend
@@ -1,7 +1,11 @@
-# imagen base Node
-FROM node:18-alpine
-WORKDIR /app/backend
-COPY backend/package*.json ./
-RUN npm ci
-COPY backend .
-CMD ["node", "server.js"]
+# Dockerfile.backend
+FROM python:3.11
+
+WORKDIR /app
+
+COPY backend/ /app
+COPY requirements.txt .
+
+RUN pip install --no-cache-dir -r requirements.txt
+
+CMD ["python", "app.py"]
